--- a/src/app/pages/match-details/match-details.page.html
+++ b/src/app/pages/match-details/match-details.page.html
@@ -20,15 +20,15 @@
 
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" color="black">
+  <ion-tab-bar slot="top" color="black">
    
-    <ion-tab-button tab="fixtures">
-      <ion-label>Fixtures</ion-label>
+    <ion-tab-button tab="match-details-info">
+      <ion-label>Info</ion-label>
     </ion-tab-button>
       
-    <ion-tab-button tab="players">
+    <!--ion-tab-button tab="players">
       <ion-label>Player Profiles</ion-label>
-    </ion-tab-button>
+    </ion-tab-button-->
       
   </ion-tab-bar>
 
